added some grid content

--- a/thank-you.html
+++ b/thank-you.html
@@ -514,6 +514,104 @@
         </div>
       </section>
 
+      <!-- Features -->
+      <section class="page-content features">
+        <div class="container grid-2-col">
+          <!-- feature -->
+          <div class="feature">
+
+            <div class="card">
+              <!-- media item -->
+              <figure class="media-item lazyload">
+                <picture>
+                  <img src="images/content/img-content-analytics-wide.jpg" data-src="images/content/img-content-analytics-wide.jpg" class="lazyload" alt="Group of application interfaces.">
+                  <noscript>
+                    <img src="images/content/img-content-analytics-wide.jpg" alt="Group of application interfaces.">
+                  </noscript>
+                </picture>
+              </figure>
+              <!-- copy -->
+              <div class="card-block">
+                <h4 class="card-title">Business in a Box</h4>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="business-in-a-box.html" class="btn btn-round btn-primary">Read More</a>
+              </div>
+            </div>
+
+
+          </div>
+          <!-- feature -->
+          <div class="feature">
+
+            <div class="card">
+              <!-- media item -->
+              <figure class="media-item lazyload">
+                <picture>
+                  <img src="images/content/img-content-testing-wide.jpg" data-src="images/content/img-content-testing-wide.jpg" class="lazyload" alt="Group of application interfaces.">
+                  <noscript>
+                    <img src="images/content/img-content-testing-wide.jpg" alt="Group of application interfaces.">
+                  </noscript>
+                </picture>
+              </figure>
+              <!-- copy -->
+              <div class="card-block">
+                <h4 class="card-title">Enterprise Mobile Crm</h4>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="enterprise-mobile-crm.html" class="btn btn-round btn-primary">Read More</a>
+              </div>
+            </div>
+
+
+          </div>
+          <!-- feature -->
+          <div class="feature">
+
+            <div class="card">
+              <!-- media item -->
+              <figure class="media-item lazyload">
+                <picture>
+                  <img src="images/content/img-content-integration-team-wide.jpg" data-src="images/content/img-content-integration-team-wide.jpg" class="lazyload" alt="Group of application interfaces.">
+                  <noscript>
+                    <img src="images/content/img-content-integration-team-wide.jpg" alt="Group of application interfaces.">
+                  </noscript>
+                </picture>
+              </figure>
+              <!-- copy -->
+              <div class="card-block">
+                <h4 class="card-title">Security as a Service</h4>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="security-as-a-service.html" class="btn btn-round btn-primary">Read More</a>
+              </div>
+            </div>
+
+
+          </div>
+          <!-- feature -->
+          <div class="feature">
+
+            <div class="card">
+              <!-- media item -->
+              <figure class="media-item lazyload">
+                <picture>
+                  <img src="images/content/img-content-app-user-01-wide.jpg" data-src="images/content/img-content-app-user-01-wide.jpg" class="lazyload" alt="Group of application interfaces.">
+                  <noscript>
+                    <img src="images/content/img-content-app-user-01-wide.jpg" alt="Group of application interfaces.">
+                  </noscript>
+                </picture>
+              </figure>
+              <!-- copy -->
+              <div class="card-block">
+                <h4 class="card-title">Integration as a Service</h4>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="iaas.html" class="btn btn-round btn-primary">Read More</a>
+              </div>
+            </div>
+
+
+          </div>
+        </div>
+      </section>
+
     </main>
 
     <footer class="site-footer" role="contentinfo">
