--- a/contact.html
+++ b/contact.html
@@ -520,14 +520,14 @@
               <div class="col-md-6">
                 <div class="form-group">
                   <label class="sr-only" for="contactName">Name</label>
-                  <input class="form-control" type="text" id="contactName" name="name" placeholder="Name" required>
+                  <input class="form-control" type="text" id="contactName" name="name" placeholder="Name *" required>
                   <p class="help-block text-danger"></p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group">
                   <label class="sr-only" for="contactEmail">Email</label>
-                  <input class="form-control" type="email" id="contactEmail" name="email" placeholder="E-mail" required>
+                  <input class="form-control" type="email" id="contactEmail" name="email" placeholder="E-mail *" required>
                   <p class="help-block text-danger"></p>
                 </div>
               </div>
