--- a/thank-you.html
+++ b/thank-you.html
@@ -509,13 +509,8 @@
         </div>
       </section>
 
-      <section id="page-start" class="page-content">
-        <div class="container">
-        </div>
-      </section>
-
       <!-- Features -->
-      <section class="page-content features">
+      <section id="page-start" class="page-content features">
         <div class="container grid-2-col">
           <!-- feature -->
           <div class="feature">
