--- a/thank-you.html
+++ b/thank-you.html
@@ -511,6 +511,7 @@
 
       <!-- Features -->
       <section id="page-start" class="page-content features">
+        <h2 class="mb-4 text-center">Our Services</h2>
         <div class="container grid-2-col">
           <!-- feature -->
           <div class="feature">
