--- a/products/wmsb/index.html
+++ b/products/wmsb/index.html
@@ -509,7 +509,7 @@
       <!-- masthead -->
       <section class="masthead bg-hero bg-hero-bus theme-black">
         <div class="container">
-          <h1>Transportation Tracking</h1>
+          <h1>School Bus Tracking</h1>
           <p class="lead">User friendly interface and app experience. Serves as centralized software for the schools.</p>
           <div class="btn-group">
             <a href="#page-start" class="btn btn-lg btn-round btn-secondary" data-scroll>Learn More</a>
