WMSB link change

--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                   <a class="dropdown-item" href="//www.gr8market.biz/">Gr8Market</a>
                   <a class="dropdown-item" href="//www.gr8cloud.biz/">Gr8Cloud</a>
                   <!--<a class="dropdown-item" href="//maxcentive.netlify.com/">MaxCentive</a>-->
-                  <a class="dropdown-item" href="products/wmsb/">Watch My School Bus</a>
+                  <a class="dropdown-item" href="//www.watchmyschoolbus.com/">Watch My School Bus</a>
                 </div>
               </li>
               <li class="nav-item dropdown">
@@ -629,7 +629,7 @@
           <nav class="nav-list" aria-labelledby="company-products">
             <h3 id="company-products" class="nav-title"><a href="#0">Products</a></h3>
             <ul>
-              <li><a href="products/wmsb/">Watch My School Bus</a></li>
+              <li><a href="//www.watchmyschoolbus.com/">Watch My School Bus</a></li>
               <li><a href="#0">Chatmate</a></li>
               <li><a href="#0">iPaaS</a></li>
               <li><a href="#0">AWS Cloud</a></li>
