GoChatMate secure link change

--- a/subscription-services-1.html
+++ b/subscription-services-1.html
@@ -432,7 +432,7 @@
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="products" id="products-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products</a>
                 <div class="dropdown-menu" aria-labelledby="products-dropdown">
-                  <a class="dropdown-item" href="http://gochatmate.com/">Chatmate</a>
+                  <a class="dropdown-item" href="//www.gochatmate.com/">Chatmate</a>
                   <a class="dropdown-item" href="//www.gr8integration.com/">Gr8Integration</a>
                   <a class="dropdown-item" href="//www.gr8market.biz/">Gr8Market</a>
                   <a class="dropdown-item" href="//www.gr8cloud.biz/">Gr8Cloud</a>
